--- a/index.html
+++ b/index.html
@@ -8,10 +8,75 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
+<style>
+    /* Basic reset */
+    body,
+    h1,
+    h2,
+    p {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        color: #333;
+    }
+
+    .container {
+        max-width: 800px;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #f9f9f9;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    button {
+        margin: 15px 5px;
+    }
+
+    .privacy-policy {
+        max-width: 800px;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #f9f9f9;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Headings styling */
+    h1 {
+        font-size: 2.5em;
+        margin-bottom: 20px;
+        text-align: center;
+        color: #0056b3;
+    }
+
+    h2 {
+        font-size: 1.5em;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        color: #0056b3;
+    }
+
+    /* Paragraph styling */
+    p {
+        line-height: 1.6;
+        margin-bottom: 15px;
+    }
+
+    /* Link styling (if needed) */
+    a {
+        color: #0056b3;
+        text-decoration: none;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+</style>
 
 <body>
     <div class="container">
-        <h1>Spring boot with payment gateway.....</h1>
+        <h2>payment for course</h2>
         <table>
             <tr>
                 <td> Enter Name</td>
@@ -27,7 +92,7 @@
             </tr>
 
             <tr>
-                <td> Enter cource</td>
+                <td> Enter course</td>
                 <td>
                     <select class="form-select" name="course" id="course" aria-label="large select example">
                         <option selected>Select course</option>
@@ -53,6 +118,33 @@
             </tr>
 
         </table>
+
+    </div>
+
+    <div class="privacy-policy">
+        <h2>Terms and Conditions</h2>
+        <p>Welcome to website. By accessing or using our website, you agree to be bound by these terms...</p>
+
+
+        <p>These terms and conditions outline the rules and regulations for the use of Website,
+        </p>
+
+        <h2>Refund and Cancellation Policy</h2>
+        <p>If you are not satisfied with your purchase, you may request a refund within 3 days. Refunds will be
+            processed within 5-7 working days...</p>
+
+
+        <h2>Pricing</h2>
+        <p>All prices are listed in Indian Rupees (INR). Prices are inclusive of all applicable taxes...</p>
+
+
+        <h2>Contact Us</h2>
+        <p>For any inquiries or support, please contact us at:</p>
+        <p>Email: mahimadevade@gmail.com</p>
+        <p>Phone: 7350613207</p>
+        <p>Address: pune maharashtra</p>
+
+    </div>
     </div>
     <script>
         async function createOrder() {
