--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <style>
     /* Basic reset */
+    body {
+        background-color: #f4ec95;
+    }
+
     body,
     h1,
     h2,
@@ -18,6 +22,32 @@
         padding: 0;
         font-family: Arial, sans-serif;
         color: #333;
+
+    }
+
+    .course-card {
+        max-width: 895px;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #f9f9f9;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: space-evenly;
+        overflow-x: scroll;
+    }
+
+    .course-card::-webkit-scrollbar {
+        display: none;
+    }
+
+    .c1 {
+        display: flex;
+        margin-right: 20px;
+    }
+
+    .c2 {
+        display: flex;
     }
 
     .container {
@@ -75,6 +105,106 @@
 </style>
 
 <body>
+    <div class=" course-card mt-5">
+
+        <div class="c1">
+            <div class="card" style="width: 18rem;">
+                <div class="card-header bg-primary text-white text-center">
+                    <h5>HTML,CSS</h5>
+                </div>
+                <div class="card-body">
+                    <p class="card-text"><strong>Description:</strong> Learn HTML,CSS</p>
+
+                    <p class="card-text"><strong>Schedule:</strong> Mon & Wed, 7 PM - 8 PM IST</p>
+                    <p class="card-text"><strong>Fees:</strong> ₹8999</p>
+                    <p class="card-text"><strong>Discount:</strong> 10% off for early registration</p>
+                </div>
+
+                <div class="card-footer text-center">
+                    <a href="#" class="btn btn-primary">Enroll Now</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-header bg-primary text-white text-center">
+                    <h5>Javascript</h5>
+                </div>
+                <div class="card-body">
+                    <p class="card-text"><strong>Description:</strong> Learn javascript</p>
+                    <p class="card-text"><strong>Schedule:</strong> Mon & Wed, 7 PM - 8 PM IST</p>
+                    <p class="card-text"><strong>Fees:</strong> ₹8999</p>
+                    <p class="card-text"><strong>Discount:</strong> 10% off for early registration</p>
+                </div>
+
+                <div class="card-footer text-center">
+                    <a href="#" class="btn btn-primary">Enroll Now</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-header bg-primary text-white text-center">
+                    <h5>JAVA</h5>
+                </div>
+                <div class="card-body">
+                    <p class="card-text"><strong>Description:</strong> Learn JAVA</p>
+                    <p class="card-text"><strong>Schedule:</strong> Mon & Wed, 7 PM - 8 PM IST</p>
+                    <p class="card-text"><strong>Fees:</strong> ₹8999</p>
+                    <p class="card-text"><strong>Discount:</strong> 10% off for early registration</p>
+                </div>
+
+                <div class="card-footer text-center">
+                    <a href="#" class="btn btn-primary">Enroll Now</a>
+                </div>
+            </div>
+        </div>
+        <div class="c2">
+            <div class="card" style="width: 18rem;">
+                <div class="card-header bg-primary text-white text-center">
+                    <h5>Python</h5>
+                </div>
+                <div class="card-body">
+                    <p class="card-text"><strong>Description:</strong> Learn Python</p>
+
+                    <p class="card-text"><strong>Schedule:</strong> Mon & Wed, 7 PM - 8 PM IST</p>
+                    <p class="card-text"><strong>Fees:</strong> ₹8999</p>
+                    <p class="card-text"><strong>Discount:</strong> 10% off for early registration</p>
+                </div>
+
+                <div class="card-footer text-center">
+                    <a href="#" class="btn btn-primary">Enroll Now</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-header bg-primary text-white text-center">
+                    <h5>Rust</h5>
+                </div>
+                <div class="card-body">
+                    <p class="card-text"><strong>Description:</strong> Learn Rust</p>
+                    <p class="card-text"><strong>Schedule:</strong> Mon & Wed, 7 PM - 8 PM IST</p>
+                    <p class="card-text"><strong>Fees:</strong> ₹8999</p>
+                    <p class="card-text"><strong>Discount:</strong> 10% off for early registration</p>
+                </div>
+
+                <div class="card-footer text-center">
+                    <a href="#" class="btn btn-primary">Enroll Now</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-header bg-primary text-white text-center">
+                    <h5>PHP</h5>
+                </div>
+                <div class="card-body">
+                    <p class="card-text"><strong>Description:</strong> Learn the php</p>
+                    <p class="card-text"><strong>Schedule:</strong> Mon & Wed, 7 PM - 8 PM IST</p>
+                    <p class="card-text"><strong>Fees:</strong> ₹8999</p>
+                    <p class="card-text"><strong>Discount:</strong> 10% off for early registration</p>
+                </div>
+
+                <div class="card-footer text-center">
+                    <a href="#" class="btn btn-primary">Enroll Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <h2>payment for course</h2>
         <table>
@@ -137,7 +267,12 @@
         <h2>Pricing</h2>
         <p>All prices are listed in Indian Rupees (INR). Prices are inclusive of all applicable taxes...</p>
 
-
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+                Agree To Terms and Condition
+            </label>
+        </div>
         <h2>Contact Us</h2>
         <p>For any inquiries or support, please contact us at:</p>
         <p>Email: mahimadevade@gmail.com</p>
